@@ -1,4 +1,10 @@
 2005-12-27 Mikhail Khodjaiants
+	 Cleanup.
+	 * HTMLPrinter.java
+	 * AbstractViewActionDelegate.java
+	 * CDebugUIPlugin.java
+
+2005-12-27 Mikhail Khodjaiants
 	Bug 109526: Support Eclipse-LazyStart and deprecate Eclipse-AutoStart.
 	* MANIFEST.MF
 
